# rust-api-gateway

./: Cargo.toml  LICENSE  README.md  cookies.txt
config/: default.toml  development.toml  preproduction.toml  production.toml
src/: config.rs  lib.rs  main.rs  router.rs
src/handlers/: auth.rs  health.rs  proxy.rs
src/middleware/: auth_guard.rs
src/models/: login_request.rs  mod.rs  session_user.rs
tests/: api_tests.rs
